css/section-switcher.css
h3,h4 {
    margin-bottom: 0;
}
.logo {
    height: 8vh;
    width: 8vw;
}
p {
    text-align: justify;
}
p, ul, li {
    font-family: 'Times New Roman';
}
details {
    cursor: pointer;
    width: max-content;
    background-color: inherit;
}
section div {
    border-radius: 13px;
    background-color: var(--l-bg-1);
    padding: 2vh 2vw;
    margin-bottom: 4vh;
}
section a {
    color:inherit;
}

article > section {
    display: none;
    margin-top: 2vh;
}
article > section[active] {
    display: block;
}
header {
    position: sticky;
    background: var(--pattern);
    top:0;
}
#main-content hr {
    margin-bottom: 0;
}

/*  mobile screens */
@media screen and (max-width: 820px) {
    #main-content {
        font-size: 1rem;
    }
    p, ul, li {
        font-size: .9rem;
    }
    details {
        font-size: 1.3rem;
    }
    #mobile-nav {
        top: 11vh;
    }
    section div {
        padding: 2vh 4vw;
    }
}

/* Half opened pc window */
@media screen and (max-width: 820px) and (hover: hover) {
    #main-content {
        font-size: 1.1rem;
    }
    p, ul, li {
        font-size: 1.3rem;
    }
}

/* pc */
@media screen and (min-width: 820px) {
    img {
        width: 50%;
    }
    header {
        padding: 1vh 1vw;
        padding-top: 0;
    }
    article {
        margin: 1vh 1vw;
    }
    /* (2)  */
    br.mob {
        display: none;
    }
}

/* hovering capable screens */
@media (hover: hover) {
    details option:hover {
        background-color: var(--l-bg-1);
    }
}

